--- a/McTools.Xrm.Connection.TestWinForm/app.config
+++ b/McTools.Xrm.Connection.TestWinForm/app.config
@@ -27,4 +27,42 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.diagnostics>
+    <trace autoflush="true" />
+    <sources>
+      <source name="Microsoft.Xrm.Tooling.Connector.CrmServiceClient"
+              switchName="Microsoft.Xrm.Tooling.Connector.CrmServiceClient"
+              switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <add name="console" type="System.Diagnostics.DefaultTraceListener" />
+          <remove name="Default" />
+          <add name ="fileListener" />
+        </listeners>
+      </source>
+
+      <source name="Microsoft.Xrm.Tooling.CrmConnectControl"
+              switchName="Microsoft.Xrm.Tooling.CrmConnectControl"
+              switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <add name="console" type="System.Diagnostics.DefaultTraceListener" />
+          <remove name="Default" />
+          <add name ="fileListener" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <!--
+            Possible values for switches: Off, Error, Warning, Info, Verbose
+                Verbose:    includes Error, Warning, Info, Trace levels
+                Info:       includes Error, Warning, Info levels
+                Warning:    includes Error, Warning levels
+                Error:      includes Error level
+        -->
+      <add name="Microsoft.Xrm.Tooling.Connector.CrmServiceClient" value="Verbose" />
+      <add name="Microsoft.Xrm.Tooling.CrmConnectControl" value="Verbose" />
+    </switches>
+    <sharedListeners>
+      <add name="fileListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="XRMToolingLogs.log" />
+    </sharedListeners>
+  </system.diagnostics>
 </configuration>
