--- a/McTools.Xrm.Connection.TestWinForm/app.config
+++ b/McTools.Xrm.Connection.TestWinForm/app.config
@@ -19,34 +19,30 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.23.0.0" newVersion="2.23.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.24.0.0" newVersion="2.24.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory.WindowsForms" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.23.0.0" newVersion="2.23.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.24.0.0" newVersion="2.24.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.diagnostics>
     <trace autoflush="true" />
     <sources>
-      <source name="Microsoft.Xrm.Tooling.Connector.CrmServiceClient"
-              switchName="Microsoft.Xrm.Tooling.Connector.CrmServiceClient"
-              switchType="System.Diagnostics.SourceSwitch">
+      <source name="Microsoft.Xrm.Tooling.Connector.CrmServiceClient" switchName="Microsoft.Xrm.Tooling.Connector.CrmServiceClient" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
           <add name="console" type="System.Diagnostics.DefaultTraceListener" />
           <remove name="Default" />
-          <add name ="fileListener" />
+          <add name="fileListener" />
         </listeners>
       </source>
 
-      <source name="Microsoft.Xrm.Tooling.CrmConnectControl"
-              switchName="Microsoft.Xrm.Tooling.CrmConnectControl"
-              switchType="System.Diagnostics.SourceSwitch">
+      <source name="Microsoft.Xrm.Tooling.CrmConnectControl" switchName="Microsoft.Xrm.Tooling.CrmConnectControl" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
           <add name="console" type="System.Diagnostics.DefaultTraceListener" />
           <remove name="Default" />
-          <add name ="fileListener" />
+          <add name="fileListener" />
         </listeners>
       </source>
     </sources>
