Change the way connection logs are accessible Fix an issue with last connection file used

--- a/McTools.Xrm.Connection.TestWinForm/app.config
+++ b/McTools.Xrm.Connection.TestWinForm/app.config
@@ -34,7 +34,9 @@
         <listeners>
           <add name="console" type="System.Diagnostics.DefaultTraceListener" />
           <remove name="Default" />
-          <add name="fileListener" />
+          <!--<add name="fileListener" />-->
+          <add name="CustomListener"/>
+
         </listeners>
       </source>
 
@@ -42,7 +44,8 @@
         <listeners>
           <add name="console" type="System.Diagnostics.DefaultTraceListener" />
           <remove name="Default" />
-          <add name="fileListener" />
+          <!--<add name="fileListener" />-->
+          <add name="CustomListener"/>
         </listeners>
       </source>
     </sources>
@@ -58,7 +61,12 @@
       <add name="Microsoft.Xrm.Tooling.CrmConnectControl" value="Verbose" />
     </switches>
     <sharedListeners>
-      <add name="fileListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="XRMToolingLogs.log" />
+      <add name="fileListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="XRMToolingLogs.log" Location="LocalUserApplicationDirectory" MaxFileSize="52428800" />
+      <add name="CustomListener"
+            type="Microsoft.Xrm.Tooling.Connector.DynamicsFileLogTraceListener, Microsoft.Xrm.Tooling.Connector"
+            BaseFileName="MscrmTools.Xrm.Connection"
+             Location="LocalUserApplicationDirectory" MaxFileSize="52428800"
+           />
     </sharedListeners>
   </system.diagnostics>
 </configuration>
