--- a/McTools.Xrm.Connection.TestWinForm/app.config
+++ b/McTools.Xrm.Connection.TestWinForm/app.config
@@ -35,7 +35,7 @@
           <add name="console" type="System.Diagnostics.DefaultTraceListener" />
           <remove name="Default" />
           <!--<add name="fileListener" />-->
-          <add name="CustomListener"/>
+          <add name="CustomListener" />
 
         </listeners>
       </source>
@@ -45,7 +45,7 @@
           <add name="console" type="System.Diagnostics.DefaultTraceListener" />
           <remove name="Default" />
           <!--<add name="fileListener" />-->
-          <add name="CustomListener"/>
+          <add name="CustomListener" />
         </listeners>
       </source>
     </sources>
@@ -62,11 +62,7 @@
     </switches>
     <sharedListeners>
       <add name="fileListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="XRMToolingLogs.log" Location="LocalUserApplicationDirectory" MaxFileSize="52428800" />
-      <add name="CustomListener"
-            type="Microsoft.Xrm.Tooling.Connector.DynamicsFileLogTraceListener, Microsoft.Xrm.Tooling.Connector"
-            BaseFileName="MscrmTools.Xrm.Connection"
-             Location="LocalUserApplicationDirectory" MaxFileSize="52428800"
-           />
+      <add name="CustomListener" type="Microsoft.Xrm.Tooling.Connector.DynamicsFileLogTraceListener, Microsoft.Xrm.Tooling.Connector" BaseFileName="MscrmTools.Xrm.Connection" Location="LocalUserApplicationDirectory" MaxFileSize="52428800" />
     </sharedListeners>
   </system.diagnostics>
 </configuration>
