--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,10 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+/.vs/MscrmTools.Xrm.Connection/v15/Server/sqlite3/storage.ide-wal
+/.vs/MscrmTools.Xrm.Connection/v15/Server/sqlite3/storage.ide-shm
+/.vs/MscrmTools.Xrm.Connection/v15/Server/sqlite3/storage.ide
+/.vs/MscrmTools.Xrm.Connection/v15/Server/sqlite3/db.lock
+/.vs/MscrmTools.Xrm.Connection/v15/sqlite3/storage.ide-wal
+/.vs/MscrmTools.Xrm.Connection/v15/sqlite3/storage.ide-shm
+/.vs/MscrmTools.Xrm.Connection/v15/sqlite3/db.lock
