--- a/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
+++ b/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
@@ -145,10 +145,10 @@
     <Compile Include="deviceidmanager.cs" />
     <Compile Include="Organization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\AccessToken.cs" />
     <Compile Include="Utils\AutoRefreshSecurityToken.cs" />
     <Compile Include="Utils\ManagedTokenDiscoveryServiceProxy.cs" />
-    <Compile Include="Utils\ManagedTokenOrganizationWebProxyClient.cs" />
+    <Compile Include="Utils\RefreshTokenAuthOverride.cs" />
+    <Compile Include="Utils\S2SAuthOverride.cs" />
     <Compile Include="XmlSerializerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
