Added the possibility to change the name of the connection file

--- a/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
+++ b/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
@@ -270,6 +270,12 @@
     <Compile Include="EnvHighlightSettingsDialog.Designer.cs">
       <DependentUpon>EnvHighlightSettingsDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="RenameConnectionFileDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RenameConnectionFileDialog.designer.cs">
+      <DependentUpon>RenameConnectionFileDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="UpdatePasswordForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -379,6 +385,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EnvHighlightSettingsDialog.resx">
       <DependentUpon>EnvHighlightSettingsDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RenameConnectionFileDialog.resx">
+      <DependentUpon>RenameConnectionFileDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdatePasswordForm.resx">
       <DependentUpon>UpdatePasswordForm.cs</DependentUpon>
