--- a/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
+++ b/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
@@ -58,7 +58,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>McTools.Xrm.Connection.WinForms.pfx</AssemblyOriginatorKeyFile>
@@ -197,6 +197,12 @@
     <Compile Include="CustomControls\ConnectionLoadingControl.Designer.cs">
       <DependentUpon>ConnectionLoadingControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustomControls\ConnectionServicePrincipalControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CustomControls\ConnectionServicePrincipalControl.Designer.cs">
+      <DependentUpon>ConnectionServicePrincipalControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomControls\ConnectionOauthControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -315,6 +321,9 @@
     <EmbeddedResource Include="CustomControls\ConnectionLoadingControl.resx">
       <DependentUpon>ConnectionLoadingControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CustomControls\ConnectionServicePrincipalControl.resx">
+      <DependentUpon>ConnectionServicePrincipalControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustomControls\ConnectionOauthControl.resx">
       <DependentUpon>ConnectionOauthControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -341,6 +350,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConnectionSelector.resx">
       <DependentUpon>ConnectionSelector.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CrmConnectionStatusBar.resx">
       <DependentUpon>CrmConnectionStatusBar.cs</DependentUpon>
@@ -431,6 +441,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\powerapps16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ServicePrincipal.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
